@@ -2,69 +2,61 @@ package com.quitsmoking.platform.service;
 
 import com.quitsmoking.platform.dto.NotificationRequest;
 import com.quitsmoking.platform.dto.NotificationResponse;
-import com.quitsmoking.platform.entity.Account;
 import com.quitsmoking.platform.entity.Notification;
-import com.quitsmoking.platform.repository.AccountRepository;
 import com.quitsmoking.platform.repository.NotificationRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import java.time.ZonedDateTime;
+import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class NotificationService {
-
-    private final NotificationRepository notificationRepo;
-    private final AccountRepository accountRepo;
     @Autowired
-    public NotificationService(NotificationRepository notificationRepo, AccountRepository accountRepo) {
-        this.notificationRepo = notificationRepo;
-        this.accountRepo = accountRepo;
+    private NotificationRepository notificationRepository;
 
-    }
-
-
-    public NotificationResponse create(NotificationRequest request) {
-        Account account = accountRepo.findById(request.getAccountId())
-                .orElseThrow(() -> new RuntimeException("Account not found"));
-
+    public NotificationResponse createNotification(NotificationRequest request) {
         Notification notification = new Notification();
-        notification.setAccount(account);
-        notification.setSubject(request.getSubject());
-        notification.setContent(request.getContent());
-        notification.setSendAt(request.getSendAt());
-        notification.setSent(false);
-
-        notificationRepo.save(notification);
-
-        return new NotificationResponse(account.getEmail(), request.getSubject(), request.getContent(), request.getSendAt(), false);
+        notification.setRecipientId(request.getRecipientId());
+        notification.setSenderId(request.getSenderId());
+        notification.setTitle(request.getTitle());
+        notification.setMessage(request.getMessage());
+        notification.setType(request.getType());
+        notification.setIsRead(false);
+        notification.setCreatedAt(LocalDateTime.now());
+        notification = notificationRepository.save(notification);
+        return toResponse(notification);
     }
 
-    public List<NotificationResponse> getAll() {
-        return notificationRepo.findAll().stream()
-                .map(n -> new NotificationResponse(
-                        n.getAccount().getEmail(),
-                        n.getSubject(),
-                        n.getContent(),
-                        n.getSendAt(),
-                        n.isSent()
-                )).toList();
+    public List<NotificationResponse> getNotificationsByRecipient(Long recipientId) {
+        return notificationRepository.findByRecipientId(recipientId)
+                .stream().map(this::toResponse).collect(Collectors.toList());
     }
 
-    public void sendDueNotifications() {
-        ZonedDateTime now = ZonedDateTime.now();
-        List<Notification> dueNotifications = notificationRepo.findBySentFalseAndSendAtBefore(now);
-
-        for (Notification n : dueNotifications) {
-            // TODO: Send email using MailService
-            n.setSent(true);
-            notificationRepo.save(n);
-        }
+    public NotificationResponse markAsRead(Long notificationId) {
+        Notification notification = notificationRepository.findById(notificationId)
+                .orElseThrow(() -> new RuntimeException("Notification not found"));
+        notification.setIsRead(true);
+        notification = notificationRepository.save(notification);
+        return toResponse(notification);
     }
 
     public void delete(Long id) {
-        notificationRepo.deleteById(id);
+        notificationRepository.deleteById(id);
+    }
+
+    private NotificationResponse toResponse(Notification n) {
+        NotificationResponse res = new NotificationResponse();
+        res.setId(n.getId());
+        res.setRecipientId(n.getRecipientId());
+        res.setSenderId(n.getSenderId());
+        res.setTitle(n.getTitle());
+        res.setMessage(n.getMessage());
+        res.setType(n.getType());
+        res.setIsRead(n.getIsRead());
+        res.setCreatedAt(n.getCreatedAt());
+        return res;
     }
 }
 
